--- a/nest/Vagrantfile
+++ b/nest/Vagrantfile
@@ -70,15 +70,17 @@ Vagrant.configure("2") do |config|
     chef.add_recipe "build-essential"
     chef.add_recipe "git"
     chef.add_recipe "vim"
+    chef.add_recipe "nodejs::install_from_source"
     chef.add_recipe "postgresql::server"
     chef.add_recipe "postgresql::client"
     chef.json = {
       :nest => {
-      :repository => "gitolite@samba01.vail:webteam/jchef",
-      :app => "jchef",
-      :migrate => false,
-      :database => true,
-      :deploy_key => "-----BEGIN RSA PRIVATE KEY-----
+        :repository => "git://github.com/wallywest/jchef.git",
+        :app => "jchef",
+        :revision => "master",
+        :migrate => true,
+        :database => true,
+        :deploy_key => "-----BEGIN RSA PRIVATE KEY-----
   MIIEowIBAAKCAQEA3Sr3IqzQ5soMzVbUSYxgrw4SPJkpP0lBjI1nnSi6SIX6kdgM
   SyplRhiWYzj2JH26Ni/wd0/K8xU9rHeEmKjmvPtZhNO8j8/dDcD1DOKrXvvXGsTx
   3KltJVEhwaE5txGR802I5GG3Z1UU/KLRg3HAf9/+UGDCxwbKuGqeKJIbq2rhLtHQ
@@ -105,11 +107,11 @@ Vagrant.configure("2") do |config|
   th1oYRr/bBZzPTq3STKj0MqX8VXzhOuWkot1+1notQnrr34gtG0AP0uOXLkt/aoy
   VVHQWQCHrnY/s3GmtlcDse76nZRqh54FXoWkUimXmZpxc3J3YTC2
   -----END RSA PRIVATE KEY-----"
-    }
       }
+    }
 
-      #chef.run_list = [
-      #  "recipe[nest::justin]"
-      #]
+      chef.run_list = [
+        "recipe[nest::justin]"
+      ]
     end
 end
