--- a/nest/Vagrantfile
+++ b/nest/Vagrantfile
@@ -88,7 +88,7 @@ Vagrant.configure("2") do |config|
       }
     }
     chef.run_list = [
-      "recipe[nest::nginx]"
+      "recipe[nest::create]"
     ]
     end
 end
